<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/selection0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007380"
                android:hint="@string/type"
                android:textColor="#ff003c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#FF3366" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selection1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007380"
                android:hint="@string/select"
                android:textColor="#ff003c" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#FF3366" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selection2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007380"
                android:hint="@string/select"
                android:textColor="#ff003c" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#FF3366" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_game"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selection3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007380"
                android:hint="@string/select"
                android:textColor="#ff003c" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#FF3366" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_music"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selection4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007380"
                android:hint="@string/select"
                android:textColor="#ff003c" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#FF3366" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_image"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selection5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007380"
                android:hint="@string/select"
                android:textColor="#ff003c" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#FF3366" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_chat"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selection6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007380"
                android:hint="@string/select"
                android:textColor="#ff003c" />

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#FF3366" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_wifi_3G"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selection7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007380"
                android:hint="@string/select"
                android:textColor="#ff003c" />

            <Spinner
                android:id="@+id/spinner7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#FF3366" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_call"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selection8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007380"
                android:hint="@string/select"
                android:textColor="#ff003c" />

            <Spinner
                android:id="@+id/spinner8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>
    </TableLayout>

</ScrollView>